<resources>
    <string name="runrunner">Run runner</string>
    <string name="title_activity_maps">Map</string>

    <string name="menu1">Mapa</string>
    <string name="menu2">Recorridos</string>
    <string name="menu3">Calendario</string>
    <string name="menu4">Opciones</string>
    <string name="mode1">Bicicleta</string>
    <string name="mode2">Running</string>
    <string name="mode3">Auto</string>
    <string name="historic_clear_button">Borrar todos los registros</string>
    <string name="historic_item_distance">Distancia</string>
    <string name="historic_item_time">Tiempo</string>
    <string name="historic_item_date">Fecha</string>
    <string name="historic_item_average">Promedio</string>
    <string name="conf_follow_title">Seguimiento</string>
    <string name="conf_follow_description">El mapa seguirá continuamente la nueva ubicación actual.</string>
    <string name="conf_pause_title">Pausa automática</string>
    <string name="conf_pause_description">Detiene y reanuda automáticamente el cronómetro. Se produce si la ubicación no varia durante 10 segundos.</string>
    <string name="conf_mode_title">Modo</string>
    <string name="conf_mode_description">Se ajusta la velocidad de actualización según la actividad que desarrolle</string>
    <string name="conf_marker_title">Marcadores</string>
    <string name="conf_marker_description">Permite visualizar los marcadores de distancia en el mapa al visualizar un recorrido</string>
    <string name="auth_btn_google">Ingrese con GOOGLE</string>
    <string name="txt_auth">Ready Run</string>
    <string name="auth_image">Imagen de autenticación</string>
    <string name="auth_email">Email</string>
    <string name="auth_pass">Contraseña</string>
    <string name="auth_reg">Registrar</string>
    <string name="auth_acc">Acceder</string>
    <string name="detener_main">Detener</string>
    <string name="km">KMS</string>
    <string name="km_h">CALORIAS</string>
    <string name="location_settings_yes">Ir a las opciones</string>
    <string name="gps_not_found_title">El gps no se encuentra activado</string>
    <string name="gps_not_found_message">No se puede continuar sin tener las actualizaciones de ubicación</string>
    <string name="center_text">TIEMPO</string>
    <string name="auth_error">No se pudo conectar</string>
    <string name="auth_reg_mail">El correo ya se encuentra registrado</string>
    <string name="auth_no_reg_mail">El correo no se encuentra registrado</string>
    <string name="auth_wrong_pass_mail">datos mal ingresados</string>
    <string name="auth_forgot_pass">Olvide mi contraseña</string>
    <string name="auth_wrong_mail_in_forgot">Error al recuperar contraseña. Verifique su dirección de correo electrónico</string>
    <string name="auth_info_mail_send">Ya se enviado el correo a su casilla. Compruébela para proceder con el cambio de contraseña</string>
    <string name="cld_month_title">MES</string>
    <string name="cld_total_title">TOTAL</string>
    <string name="cld_week_title">SEMANA</string>
    <string name="cld_day_title">DIA</string>
    <string name="zero_value">0.00</string>
</resources>
