<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mode_1"
        android:title="@string/mode1"
        android:icon="@drawable/ic_mode_1"
        android:checkable="false"
        android:checked="false"
        android:enabled="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mode_2"
        android:title="@string/mode2"
        android:icon="@drawable/ic_mode_2"
        android:checkable="false"
        android:checked="false"
        android:enabled="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mode_3"
        android:title="@string/mode3"
        android:icon="@drawable/ic_mode_3"
        android:checkable="false"
        android:checked="false"
        android:enabled="true"
        app:showAsAction="always" />
</menu>