<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top_layout"
        android:layout_marginLeft="@dimen/margin_side_layout"
        android:layout_marginRight="@dimen/margin_side_layout"
        android:layout_marginBottom="@dimen/margin_bottom_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_conf_mode_title"
                    style="@style/ConfigurationItemsTitle"
                    android:text="@string/conf_mode_title" />

                <TextView
                    android:id="@+id/txt_conf_mode_description"
                    style="@style/ConfigurationItemsDescription"
                    android:text="@string/conf_mode_description" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_mode"
                android:layout_width="@dimen/buttons_conf"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@android:drawable/ic_menu_more" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_conf_follow_title"
                    style="@style/ConfigurationItemsTitle"
                    android:text="@string/conf_follow_title" />

                <TextView
                    android:id="@+id/txt_conf_follow_description"
                    style="@style/ConfigurationItemsDescription"
                    android:text="@string/conf_follow_description" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_follow"
                android:layout_width="@dimen/buttons_conf"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_conf_pause_title"
                    style="@style/ConfigurationItemsTitle"
                    android:text="@string/conf_pause_title" />

                <TextView
                    android:id="@+id/txt_conf_pause_description"
                    style="@style/ConfigurationItemsDescription"
                    android:text="@string/conf_pause_description" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_pause"
                android:layout_width="@dimen/buttons_conf"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_conf_marker_title"
                    style="@style/ConfigurationItemsTitle"
                    android:text="@string/conf_marker_title" />

                <TextView
                    android:id="@+id/txt_conf_marker_description"
                    style="@style/ConfigurationItemsDescription"
                    android:text="@string/conf_marker_description" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_marker"
                android:layout_width="@dimen/buttons_conf"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_conf_logout_title"
                    style="@style/ConfigurationItemsTitle"
                    android:text="Desloguearse" />

                <TextView
                    android:id="@+id/txt_conf_logout_description"
                    style="@style/ConfigurationItemsDescription"
                    android:text="Cierra la sesión actual y vuelve a la pantalla de inicio" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_logout"
                android:layout_width="@dimen/buttons_conf"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@android:drawable/ic_delete" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/line" />

    </LinearLayout>

</ScrollView>