<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title_item_dist"
            style="@style/TextViewsItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historic_item_distance" />

        <TextView
            android:id="@+id/txt_item_dist"
            style="@style/TextViewsItem"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_item_time"
                    style="@style/TextViewsItemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/historic_item_time" />

                <TextView
                    android:id="@+id/txt_item_time"
                    style="@style/TextViewsItem"
                    android:layout_height="match_parent"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_item_avg"
                    style="@style/TextViewsItemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/historic_item_average" />

                <TextView
                    android:id="@+id/txt_item_avg"
                    style="@style/TextViewsItem"
                    android:layout_height="match_parent"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_title_item_date"
                style="@style/TextViewsItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/historic_item_date"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_item_date"
                style="@style/TextViewsItem"
                android:layout_height="match_parent"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>